# Nextcloud-mcp

./: .gitignore  README.md  pyproject.toml
src/nextcloud_mcp/: __init__.py  auth.py  cv.py  files.py  pdf.py  server.py
src/nextcloud_mcp/templates/: cv.typ
