[project]
name = "nextcloud-mcp"
version = "0.1.0"
description = "MCP server for Nextcloud (files + typst CV rendering)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "pypdf>=4.0",
]

[project.scripts]
nextcloud-mcp = "nextcloud_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nextcloud_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/nextcloud_mcp/templates/cv.typ" = "nextcloud_mcp/templates/cv.typ"
